Marc's comments+thesis ppt

--- a/References/references.bib
+++ b/References/references.bib
@@ -1215,3 +1215,54 @@ number={},
 pages={415-417}, 
 ISSN={}, 
 month={Sept},}
+
+@article{Cilk,
+ author = {Frigo, Matteo and Leiserson, Charles E. and Randall, Keith H.},
+ title = {The Implementation of the Cilk-5 Multithreaded Language},
+ journal = {SIGPLAN Not.},
+ issue_date = {May 1998},
+ volume = {33},
+ number = {5},
+ month = may,
+ year = {1998},
+ issn = {0362-1340},
+ pages = {212--223},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/277652.277725},
+ doi = {10.1145/277652.277725},
+ acmid = {277725},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {critical path, multithreading, parallel computing, programming language, runtime system, work},
+} 
+
+@inproceedings{Cilk++,
+ author = {Frigo, Matteo and Halpern, Pablo and Leiserson, Charles E. and Lewin-Berlin, Stephen},
+ title = {Reducers and Other Cilk++ Hyperobjects},
+ booktitle = {Proceedings of the Twenty-first Annual Symposium on Parallelism in Algorithms and Architectures},
+ series = {SPAA '09},
+ year = {2009},
+ isbn = {978-1-60558-606-9},
+ location = {Calgary, AB, Canada},
+ pages = {79--90},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1583991.1584017},
+ doi = {10.1145/1583991.1584017},
+ acmid = {1584017},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {cilk, cilk++, hyperobject, reducer},
+} 
+
+@INPROCEEDINGS{Emilio:HPCA, 
+author={E. Castillo and L. Alvarez and M. Moreto and M. Casas and E. Vallejo and J. L. Bosque and R. Beivide and M. Valero}, 
+booktitle={2018 IEEE International Symposium on High Performance Computer Architecture (HPCA)}, 
+title={Architectural Support for Task Dependence Management with Flexible Software Scheduling}, 
+year={2018}, 
+volume={}, 
+number={}, 
+pages={283-295}, 
+keywords={hardware-software codesign;multiprocessing systems;parallel processing;scheduling;software portability;task analysis;TDM;Task Dependence Management;Task Dependence Manager;Task parallelism;architectural support;flexible software scheduling;hardware software co-design;multicore architectures;parallel executions;portability;runtime system overheads;software runtime system;software task scheduling;system adaptability;system composability;Benchmark testing;Hardware;Programming;Runtime;Software;Task analysis;Time division multiplexing;dataflow;fine grain;task based programming models;task dynamic dependences}, 
+doi={10.1109/HPCA.2018.00033}, 
+ISSN={}, 
+month={Feb},}
