--- a/background.tex
+++ b/background.tex
@@ -1,5 +1,5 @@
-\chapter{Background}
-\label{chapter.background}
+\chapter{Experimental Environment}
+\label{chapter.background} 
 To familiarize the reader, this chapter describes the background of this thesis. 
 This study includes software enhancements targeting asymetric multi-core systems.
 Thus, we first give some background information about the asymetric multi-core architecture used in this work, which is the ARM big.LITTLE architecture~\cite{Greenhalgh2011}.
