--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -26,6 +26,9 @@
 \usepackage[usenames,dvipsnames]{color}
 \usepackage{xcolor}
 \usepackage{textcomp}
+\usepackage[utf8]{inputenc}
+\usepackage{nomencl}
+\makenomenclature
 
 \definecolor{mygray}{rgb}{0.4,0.4,0.4}
 \definecolor{mygreen}{rgb}{0,0.8,0.6}
@@ -203,8 +206,14 @@
 % To change the name of the Nomenclature section, uncomment the following line
 
 %\renewcommand{\nomname}{Symbols}
-
-
+\usepackage{etoolbox}
+\renewcommand\nomgroup[1]{%
+	\item[\bfseries
+	\ifstrequal{#1}{P}{Physics Constants}{%
+		\ifstrequal{#1}{N}{Number Sets}{%
+			\ifstrequal{#1}{O}{Other Symbols}{}}}%
+	]}
+\newcommand{\proposal}{TaskGenX}
 % ********************************* Appendix ***********************************
 
 % The default value of both \appendixtocname and \appendixpagename is `Appendices'. These names can all be changed via:
