--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,6 +1,6 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Exploiting Asymmetric Systems with Flexible System Software}
+\title{Exploiting Asymmetric Multi-Core Systems with Flexible System Software}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
